fix the paragraph wrap

--- a/css/contactForm.css
+++ b/css/contactForm.css
@@ -1,4 +1,4 @@
-input[type=text], input[type=number] {
+input[type=text], input[type=number], select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -26,11 +26,18 @@ input[type=submit]:hover {
   background-color: #022954;
   color: #eaeaea;
 }
-
+fieldset{
+  width: 100%;
+  height: 100%;
+}
 #formDiv {
-  width: 60%;
+  width: 1065px;
+  height: 70%;
   border-radius: 5px;
   margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
 
   background-color: #022954;
 }
