--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,14 @@ table {
 	text-align: center;
 border-collapse: collapse;
 height: 100%;
+
  }
+ tbody tr:hover {background-color:#f5f5f5;}
+
  
  tbody tr:nth-child(odd) {
 	background-color: #364C7D;
+	
   }
   
   tbody tr:nth-child(even) {
@@ -290,7 +294,11 @@ footer {
 		opacity: 0.1;
 		width: 50%;	
 	}
-	.mySlides {display:none;}
+	.mySlides {display:none;
+		border: #364C7D;
+		border-color: #818CAB;
+		border-radius: 30px;
+	}
 
 	.image {
 		opacity: 1;
